--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Discord.Net" Version="2.3.0" />
     <PackageReference Include="Discord.Net.Commands" Version="2.3.0" />
     <PackageReference Include="Colorful.Console" Version="1.2.15" />
+    <PackageReference Include="Macross.Json.Extensions" Version="1.5.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
