Change wrong DockerfileContext

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,7 +8,7 @@
     <Nullable>enable</Nullable>
     <StartupObject>Core.Startup</StartupObject>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\</DockerfileContext>
+    <DockerfileContext>.</DockerfileContext>
     <DockerfileFile>..\dockerfile</DockerfileFile>
   </PropertyGroup>
 
