--- a/Core/Properties/launchSettings.json
+++ b/Core/Properties/launchSettings.json
@@ -1,7 +1,10 @@
 {
   "profiles": {
     "BonusBot.Core": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
