--- a/Modules/WebDashboardBoardModule/ClientApp/angular.json
+++ b/Modules/WebDashboardBoardModule/ClientApp/angular.json
@@ -23,11 +23,9 @@
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "src/tsconfig.app.json",
-                        "assets": [
-                            "src/assets"
-                        ],
+                        "assets": ["src/assets"],
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.scss"
                         ],
@@ -81,7 +79,7 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
-                        "styles": ["./node_modules/@angular/material/prebuilt-themes/purple-green.css", "src/styles.scss"],
+                        "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
                         "scripts": [],
                         "assets": ["src/assets"]
                     }
