--- a/Modules/WebDashboardBoardModule/ClientApp/package.json
+++ b/Modules/WebDashboardBoardModule/ClientApp/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.5",
-    "@angular/cdk": "^11.2.4",
-    "@angular/common": "^11.2.5",
-    "@angular/compiler": "11.2.5",
-    "@angular/core": "^11.2.5",
-    "@angular/forms": "11.2.5",
-    "@angular/material": "^11.2.4",
-    "@angular/platform-browser": "11.2.5",
-    "@angular/platform-browser-dynamic": "11.2.5",
-    "@angular/platform-server": "11.2.5",
-    "@angular/router": "11.2.5",
+    "@angular/animations": "11.2.4",
+    "@angular/cdk": "11.2.4",
+    "@angular/common": "11.2.4",
+    "@angular/compiler": "11.2.4",
+    "@angular/core": "11.2.4",
+    "@angular/forms": "11.2.4",
+    "@angular/material": "11.2.4",
+    "@angular/platform-browser": "11.2.4",
+    "@angular/platform-browser-dynamic": "11.2.4",
+    "@angular/platform-server": "11.2.4",
+    "@angular/router": "11.2.4",
     "bootstrap": "^4.6.0",
     "codelyzer": "^6.0.1",
     "core-js": "^3.8.3",
@@ -39,9 +39,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
-    "@angular/cli": "^11.2.4",
-    "@angular/compiler-cli": "^11.2.5",
-    "@angular/language-service": "^11.2.5",
+    "@angular/cli": "11.2.4",
+    "@angular/compiler-cli": "11.2.4",
+    "@angular/language-service": "11.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.20.5",
