--- a/Modules/WebDashboardBoardModule/ClientApp/src/tsconfig.server.json
+++ b/Modules/WebDashboardBoardModule/ClientApp/src/tsconfig.server.json
@@ -1,15 +1,8 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "target": "es2016"
-  },
-  "angularCompilerOptions": {
-    "entryModule": "app/app.server.module#AppServerModule"
-  },
-  "files": [
-    "main.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+    "extends": "../tsconfig.json",
+    "angularCompilerOptions": {
+        "entryModule": "app/app.server.module#AppServerModule"
+    },
+    "files": ["main.ts"],
+    "include": ["src/**/*.d.ts"]
 }
