Work on web dashboard

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,6 +10,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
     <DockerfileFile>..\dockerfile</DockerfileFile>
+    <WebDashboardSpaRoot>..\Modules\WebDashboardBoardModule\ClientApp\</WebDashboardSpaRoot>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -38,7 +39,35 @@
     <ProjectReference Include="..\Modules\LoggingModule\LoggingModule.csproj" />
     <ProjectReference Include="..\Modules\ModulesControllingModule\ModulesControllingModule.csproj" />
     <ProjectReference Condition="'$(Configuration)'=='Release'" Include="..\Modules\TDSConnectorClientModule\TDSConnectorClientModule.csproj" />
-    <ProjectReference Condition="'$(Configuration)'=='Release'" Include="..\Modules\TDSConnectorServer\TDSConnectorServerModule.csproj" />
+    <ProjectReference Condition="'$(Configuration)'=='Release'" Include="..\Modules\TDSConnectorServerModule\TDSConnectorServerModule.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
+
+  <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(WebDashboardSpaRoot)node_modules') ">
+    <!-- Ensure Node.js is installed -->
+    <Exec Command="node --version" ContinueOnError="true">
+      <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+    </Exec>
+    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js is required to build and run this project. To continue, please install Node.js from https://nodejs.org/, and then restart your command prompt or IDE." />
+    <Message Importance="high" Text="Restoring dependencies using 'npm'. This may take several minutes..." />
+    <Exec WorkingDirectory="$(WebDashboardSpaRoot)" Command="npm install" />
+  </Target>
+
+  <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
+    <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
+    <Exec WorkingDirectory="$(WebDashboardSpaRoot)" Command="npm install" />
+    <Exec WorkingDirectory="$(WebDashboardSpaRoot)" Command="npm run build -- --prod" />
+    <Exec WorkingDirectory="$(WebDashboardSpaRoot)" Command="npm run build:ssr -- --prod" Condition=" '$(BuildServerSideRenderer)' == 'true' " />
+
+    <!-- Include the newly-built files in the publish output -->
+    <ItemGroup>
+      <DistFiles Include="$(WebDashboardSpaRoot)dist\**; $(WebDashboardSpaRoot)dist-server\**" />
+      <DistFiles Include="$(WebDashboardSpaRoot)node_modules\**" Condition="'$(BuildServerSideRenderer)' == 'true'" />
+      <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
+        <RelativePath>%(DistFiles.Identity)</RelativePath>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </ResolvedFileToPublish>
+    </ItemGroup>
+  </Target>
 </Project>
