--- a/Modules/WebDashboardModule/ClientApp/angular.json
+++ b/Modules/WebDashboardModule/ClientApp/angular.json
@@ -15,7 +15,7 @@
             },
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-builders/custom-webpack:browser",
                     "options": {
                         "progress": false,
                         "outputPath": "dist",
@@ -30,7 +30,10 @@
                             "src/styles.scss"
                         ],
                         "aot": true,
-                        "allowedCommonJsDependencies": ["hammerjs"]
+                        "allowedCommonJsDependencies": ["hammerjs"],
+                        "customWebpackConfig": {
+                            "path": "extra-webpack.config.js"
+                        }
                     },
                     "configurations": {
                         "production": {
@@ -57,7 +60,7 @@
                     }
                 },
                 "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
                         "browserTarget": "WebDashboard:build"
                     },
