--- a/Modules/WebDashboardModule/ClientApp/package.json
+++ b/Modules/WebDashboardModule/ClientApp/package.json
@@ -24,7 +24,6 @@
     "@angular/platform-server": "11.2.4",
     "@angular/router": "11.2.4",
     "bootstrap": "^4.6.0",
-    "codelyzer": "^6.0.1",
     "core-js": "^3.8.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
@@ -34,17 +33,20 @@
     "rxjs": "^6.6.6",
     "ts-node": "~8.4.1",
     "tslib": "^2.0.0",
-    "tslint": "~6.1.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.3",
+    "@angular-builders/custom-webpack": "^11.1.1",
+    "@angular-builders/dev-server": "^7.3.1",
+    "@angular-devkit/build-angular": "^0.1102.5",
     "@angular/cli": "11.2.4",
     "@angular/compiler-cli": "11.2.4",
     "@angular/language-service": "11.2.4",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.6.7",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.20.5",
+    "@types/node": "^12.20.6",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
     "ini": "^1.3.7",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -54,11 +56,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "4.1.5"
-  },
-  "optionalDependencies": {
-    "fsevents": "^2.3.2",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0"
   }
 }
