--- a/Modules/WebDashboardModule/ClientApp/angular.json
+++ b/Modules/WebDashboardModule/ClientApp/angular.json
@@ -86,10 +86,9 @@
                     }
                 },
                 "lint": {
-                    "builder": "@angular-devkit/build-angular:tslint",
+                    "builder": "@angular-eslint/builder:lint",
                     "options": {
-                        "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-                        "exclude": ["**/node_modules/**"]
+                        "lintFilePatterns": ["**/*.ts", "**/*.html", "**/*.scss"]
                     }
                 },
                 "server": {
@@ -130,10 +129,9 @@
                     }
                 },
                 "lint": {
-                    "builder": "@angular-devkit/build-angular:tslint",
+                    "builder": "@angular-eslint/builder:lint",
                     "options": {
-                        "tsConfig": "e2e/tsconfig.e2e.json",
-                        "exclude": ["**/node_modules/**"]
+                        "lintFilePatterns": ["e2e/**/*.ts", "e2e/**/*.html"]
                     }
                 }
             }
