--- a/Modules/WebDashboardModule/ClientApp/package.json
+++ b/Modules/WebDashboardModule/ClientApp/package.json
@@ -39,14 +39,25 @@
     "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-builders/dev-server": "^7.3.1",
     "@angular-devkit/build-angular": "^0.1102.5",
+    "@angular-eslint/builder": "2.0.2",
+    "@angular-eslint/eslint-plugin": "2.0.2",
+    "@angular-eslint/eslint-plugin-template": "2.0.2",
+    "@angular-eslint/schematics": "2.0.2",
+    "@angular-eslint/template-parser": "2.0.2",
     "@angular/cli": "11.2.4",
     "@angular/compiler-cli": "11.2.4",
     "@angular/language-service": "11.2.4",
     "@types/jasmine": "^3.6.7",
     "@types/jasminewd2": "~2.0.8",
+    "@types/jest": "^26.0.21",
     "@types/node": "^12.20.6",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "ini": "^1.3.7",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -55,6 +66,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "4.1.5"
+    "prettier-eslint": "^12.0.0",
+    "typescript": "^4.1.5"
   }
 }
