--- a/Modules/WebDashboardModule/ClientApp/angular.json
+++ b/Modules/WebDashboardModule/ClientApp/angular.json
@@ -88,7 +88,7 @@
                 "lint": {
                     "builder": "@angular-eslint/builder:lint",
                     "options": {
-                        "lintFilePatterns": ["**/*.ts", "**/*.html", "**/*.scss"]
+                        "lintFilePatterns": ["src/**/*.ts"]
                     }
                 },
                 "server": {
@@ -131,7 +131,7 @@
                 "lint": {
                     "builder": "@angular-eslint/builder:lint",
                     "options": {
-                        "lintFilePatterns": ["e2e/**/*.ts", "e2e/**/*.html"]
+                        "lintFilePatterns": ["e2e/**/*.ts"]
                     }
                 }
             }
