--- a/Modules/WebDashboardModule/ClientApp/package.json
+++ b/Modules/WebDashboardModule/ClientApp/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "11.2.4",
     "@angular/platform-server": "11.2.4",
     "@angular/router": "11.2.4",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "hammerjs": "^2.0.8",
@@ -51,8 +53,8 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/jest": "^26.0.21",
     "@types/node": "^12.20.6",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "2.22.1",
@@ -67,6 +69,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier-eslint": "^12.0.0",
-    "typescript": "^4.1.5"
+    "typescript": "~4.1.0"
   }
 }
