--- a/Modules/WebDashboardModule/ClientApp/package.json
+++ b/Modules/WebDashboardModule/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "11.2.4",
     "@ngrx/effects": "^11.0.1",
     "@ngrx/store": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "hammerjs": "^2.0.8",
