--- a/Modules/WebDashboardModule/WebDashboardModule.csproj
+++ b/Modules/WebDashboardModule/WebDashboardModule.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
