--- a/Modules/WebDashboardModule/ClientApp/angular.json
+++ b/Modules/WebDashboardModule/ClientApp/angular.json
@@ -22,7 +22,7 @@
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
-                        "tsConfig": "src/tsconfig.app.json",
+                        "tsConfig": "tsconfig.json",
                         "assets": ["src/assets"],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -78,7 +78,7 @@
                     "options": {
                         "main": "src/test.ts",
                         "polyfills": "src/polyfills.ts",
-                        "tsConfig": "src/tsconfig.spec.json",
+                        "tsConfig": "tsconfig.json",
                         "karmaConfig": "src/karma.conf.js",
                         "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
                         "scripts": [],
@@ -96,7 +96,7 @@
                     "options": {
                         "outputPath": "dist-server",
                         "main": "src/main.ts",
-                        "tsConfig": "src/tsconfig.server.json"
+                        "tsConfig": "tsconfig.json"
                     },
                     "configurations": {
                         "dev": {
