--- a/Modules/WebDashboardModule/ClientApp/package.json
+++ b/Modules/WebDashboardModule/ClientApp/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.1.0",
     "@angular/animations": "11.2.4",
     "@angular/cdk": "11.2.4",
     "@angular/common": "11.2.4",
@@ -19,6 +20,7 @@
     "@angular/core": "11.2.4",
     "@angular/forms": "11.2.4",
     "@angular/material": "11.2.4",
+    "@angular/material-moment-adapter": "^11.2.6",
     "@angular/platform-browser": "11.2.4",
     "@angular/platform-browser-dynamic": "11.2.4",
     "@angular/platform-server": "11.2.4",
@@ -30,6 +32,7 @@
     "core-js": "^3.8.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "oidc-client": "^1.11.3",
     "popper.js": "^1.16.0",
     "protractor": "~7.0.0",
