Exclude tests in tsconfig

--- a/Modules/WebDashboardModule/ClientApp/tsconfig.json
+++ b/Modules/WebDashboardModule/ClientApp/tsconfig.json
@@ -17,5 +17,6 @@
     },
     "angularCompilerOptions": {
         "strictTemplates": true
-    }
+    },
+    "exclude": ["src/test.ts", "src/**/*.spec.ts"]
 }
