Add support for pause, resume and stop in web

--- a/Modules/WebDashboardModule/WebDashboardModule.csproj
+++ b/Modules/WebDashboardModule/WebDashboardModule.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Common.csproj" />
+    <ProjectReference Include="..\AudioModule\AudioModule.csproj" />
   </ItemGroup>
 
   <ItemGroup>
