--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -32,6 +32,7 @@
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Database\Database.csproj" />
     <ProjectReference Include="..\Modules\DateTimeTestModule\DateTimeTestModule.csproj" />
+    <ProjectReference Include="..\Modules\SQLiteToPostgresModule\SqliteToPostgresModule.csproj" />
     <ProjectReference Include="..\Modules\WebDashboardModule\WebDashboardModule.csproj" />
     <ProjectReference Include="..\Systems\GuildsSystem\GuildsSystem.csproj" />
     <ProjectReference Include="..\Modules\AdminModule\AdminModule.csproj" />
