Fix publish (NETSDK1150, breaking change in .NET SDK 5.0.300)

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,6 +12,7 @@
     <DockerfileFile>..\dockerfile</DockerfileFile>
     <WebDashboardSpaRoot>..\Modules\WebDashboardModule\ClientApp\</WebDashboardSpaRoot>
     <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
+    <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
