--- a/Modules/LoggingModule/LoggingModule.csproj
+++ b/Modules/LoggingModule/LoggingModule.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>BonusBot.LoggingModule</RootNamespace>
     <AssemblyName>BonusBot.LoggingModule</AssemblyName>
     <Nullable>enable</Nullable>
