--- a/Modules/WebDashboardModule/ClientApp/package.json
+++ b/Modules/WebDashboardModule/ClientApp/package.json
@@ -67,7 +67,7 @@
     "ini": "^1.3.7",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^6.3.19",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
