--- a/Modules/WebDashboardModule/ClientApp/tsconfig.json
+++ b/Modules/WebDashboardModule/ClientApp/tsconfig.json
@@ -13,7 +13,8 @@
         "target": "ES2018",
         "typeRoots": ["node_modules/@types"],
         "types": ["node", "jest"],
-        "lib": ["es2018", "es2015", "es2016", "dom", "es5", "es6"]
+        "lib": ["es2018", "es2015", "es2016", "dom", "es5", "es6"],
+        "esModuleInterop": true
     },
     "angularCompilerOptions": {
         "strictTemplates": true
